--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                  <a class="nav-link" href="#section1">Om Oss</a>
                </li>
                <li class="nav-item">
-                 <a class="nav-link" href="#section2">Företag</a>
+                 <a class="nav-link" href="#section2">Organisation</a>
                </li>
                <li class="nav-item">
-                <a class="nav-link" href="#section3">Privatperson</a>
+                <a class="nav-link" href="#section3">Människa och sinne</a>
               </li>
              </ul>
            </div>
@@ -83,9 +83,9 @@
       </div>
       <div class="row">
         <div class="col-md-6 idatest2">
-          <img src="assets/img/anna/Leva.webp" alt="Leva" loading="lazy">
-          <p class="textDownRight">Leva</p>
-          <a href="#ij-card4" class="link"></a>
+          <img src="assets/img/anna/Ledarskap.webp" alt="Ledarskap" loading="lazy">
+          <p class="textDownMiddle">Ledarskap</p>
+          <a href="#ij-card6" class="link"></a>
         </div>
         <div class="col-md-6 idatest2">
           <img src="assets/img/anna/Lyssna.webp" alt="Lyssna" loading="lazy">
@@ -95,9 +95,9 @@
       </div>
       <div class="row">
         <div class="col-md-4 idatest">
-          <img src="assets/img/anna/Ledarskap.webp" alt="Ledarskap" loading="lazy">
-          <p class="textDownMiddle">Ledarskap</p>
-          <a href="#ij-card6" class="link"></a>
+          <img src="assets/img/anna/Leva.webp" alt="Leva" loading="lazy">
+          <p class="textDownRight">Leva</p>
+          <a href="#ij-card4" class="link"></a>
         </div>
         <div class="col-md-4 idatest">
           <img src="assets/img/anna/Längtan.webp" alt="Längtan" loading="lazy">
@@ -127,20 +127,27 @@
                             <img src="assets/img/anna-removebg-preview.png" alt="...">
                           </div>
                           <h4>Anna</h4>
-                          <p>Lead Designer</p>
-                          <p class="text-muted text-start mb-4">Aliquet donec ut arcu risus amet mattis diam gravida. 
-                            Ac vestibulum quis proin in aliquam et et auctor. Amet urna est arcu euismod egestas morbi nunc lacus. 
-                            Nec id rutrum mauris commodo habitant amet quisque. 
-                            Velit ornare pellentesque facilisi in odio nibh. 
+                          <p class="text-muted text-start mb-4">Jag har mångårig erfarenhet inom sjuksköterskeyrket och har arbetat inom flertalet
+                            olika genrer. Jag har alltid varit sökande efter svar och mitt största intresseområde
+                            har alltid varit orsak och verkan. Varför blir vi sjuka, fysiskt och mentalt? 
                             <br/>
                             <br/>
-                            Aliquet donec ut arcu risus amet mattis diam gravida. 
-                            Ac vestibulum quis proin in aliquam et et auctor. 
-                            Amet urna est arcu euismod egestas morbi nunc lacus. 
-                            Nec id rutrum mauris commodo habitant amet quisque. Velit ornare pellentesque facilisi in odio nibh.</p>
-                          <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
-                          <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i class="bi bi-tiktok" aria-hidden="true"></i> </a>
-                          <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="bi bi-instagram" aria-hidden="true"></i></a>
+                            Sökandet
+                            efter läkande och inte enbart symtomlindrande behandlingar har fört mig bort från
+                            sjukvården och mot den preventiva hälsovården. Det finns alltid en orsak till varför vi
+                            inte mår bra, kroppen i sin natur vill läka. Ger vi kroppen rätt förutsättningar kan den
+                            utföra mirakel. Jag behöver bara guida dig på rätt väg och bidra till att på riktigt göra
+                            skillnad. Mångårigt insamlande av kunskap inom kost, aktivitet, stresshantering,
+                            sömn, meditation, medicinsk yoga och psykosomatiska symtom gör mig idag väl
+                            lämpad till att erbjuda hjälp till andra i form av livsstilsguidning.
+                            <br/>
+                            <br/>
+                            Mitt mål är att skapa
+                            något som för dig blir LIFE CHANGING.
+                            
+                          </p>
+                          <a class="btn btn-dark btn-social mx-2" href="mailto:anna@clearity.nu" aria-label="Mail till Anna"><i class="fa-solid fa-envelope" aria-hidden="true"></i></a>
+                          <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=857CF2F2_6A59_4737_AC82_B0AD009F67A5" aria-label="Länk till Anna på bokadirekt"><i class="fa-solid fa-calendar-days" aria-hidden="true"></i> </a>
                       </div>
                   </div>
                   <div class="col-lg-4">
@@ -149,20 +156,24 @@
                           <img src="assets/img/katarina-removebg-preview.png" alt="...">
                         </div>
                         <h4>Katarina</h4>
-                        <p>Lead Designer</p>
-                        <p class="text-muted text-start mb-4">Aliquet donec ut arcu risus amet mattis diam gravida. 
-                          Ac vestibulum quis proin in aliquam et et auctor. Amet urna est arcu euismod egestas morbi nunc lacus. 
-                          Nec id rutrum mauris commodo habitant amet quisque. 
-                          Velit ornare pellentesque facilisi in odio nibh. 
+                        <p class="text-muted text-start mb-4">
+                          Jag har en bakgrund inom beteendevetenskap med psykologi som huvudämne. 
+                          Jag har arbetat med och genom människor i hela mitt yrkesverksamma liv. 
+                          Jag har haft som huvuduppdrag att leda, både människor, organisationer och samtal. 
+                          Jag har jobbat med stöd till chefer och ledare, till grupper och faciliterat många samtal. 
+                          För mig är dialog och kommunikation, både med mig själv och med andra den allra viktigaste framgångsfaktorn. 
                           <br/>
                           <br/>
-                          Aliquet donec ut arcu risus amet mattis diam gravida. 
-                          Ac vestibulum quis proin in aliquam et et auctor. 
-                          Amet urna est arcu euismod egestas morbi nunc lacus. 
-                          Nec id rutrum mauris commodo habitant amet quisque. Velit ornare pellentesque facilisi in odio nibh.</p>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i class="bi bi-tiktok" aria-hidden="true"></i> </a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="bi bi-instagram" aria-hidden="true"></i></a>
+                          Framgång, vad är det för dig? För mig är det förbundenhet, att känna närhet, värme och autenticitet, i alla mina nära relationer. 
+                          Jag har haft roller där jag både suttit i ledningsgrupper, haft egna ledningsgrupper samt även arbetat med ledningsgrupper i rollen som management konsult. 
+                          Eftersom jag, i många år, har verkat i rollen som chef och ledare har jag lärt mig massor, både om vem jag är och hur jag vill vara som ledare och vad som fungerat och vad som fungerat mindre bra. 
+                          <br/>
+                          <br/>
+                          Viktigt för mig har varit att vi dels byter bilder och kommunicerar oss igenom det som är svårt och det som gör motstånd, dels att främja en kultur som kännetecknas av omtanke, värme och tillsammansskap. 
+
+                        </p>
+                        <a class="btn btn-dark btn-social mx-2" href="mailto:katarina@clearity.nu" aria-label="Mail till Katarina"><i class="fa-solid fa-envelope" aria-hidden="true"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" aria-label="Länk till Katarina på bokadirekt"><i class="fa-solid fa-calendar-days" aria-hidden="true"></i> </a>
                     </div>
                 </div>
               </div>
@@ -176,7 +187,7 @@
                 <img src="assets/img/anna/Lära.webp" alt="Lära">
                 <div class="card-body">
                   <h5 class="card-title">Lära</h5>
-                  <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
+                  <p class="card-text">Nu börjar resan för resten av ditt liv</p>
                   <div class="collapse collapsed-text" id="collapse1">
                     <p>
                       Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
@@ -196,7 +207,7 @@
                 <img src="assets/img/anna/SelfLove.webp" alt="Self Love">
                 <div class="card-body">
                   <h5 class="card-title">Self Love</h5>
-                  <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
+                  <p class="card-text">Autensitet, sanning och värme</p>
                   <div class="collapse collapsed-text" id="collapse2">
                     <p>
                       Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
@@ -216,7 +227,7 @@
                 <img src="assets/img/anna/Leta.webp" alt="Leta" >
                 <div class="card-body">
                   <h5 class="card-title">Leta</h5>
-                  <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
+                  <p class="card-text">Börjar där du står, leta och hitta precis det du vill, du kommer komma så långt som du själv önskar gå på din stig</p>
                   <div class="collapse collapsed-text" id="collapse3">
                     <p>
                       Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
@@ -236,7 +247,7 @@
                 <img src="assets/img/anna/Leva.webp" alt="Leva" >
                 <div class="card-body">
                   <h5 class="card-title">Leva</h5>
-                  <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
+                  <p class="card-text">Här och nu, inte sen, inte snart, utan NU</p>
                   <div class="collapse collapsed-text" id="collapse4">
                     <p>
                       Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
@@ -258,7 +269,7 @@
                 <img src="assets/img/anna/Lyssna.webp" alt="Lyssna" >
                 <div class="card-body">
                   <h5 class="card-title">Lyssna</h5>
-                  <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
+                  <p class="card-text">Hör du din kropps signaler? Lyssna för att skapa en bättre förståelse för vad just din kropp och ditt sinne behöver, då återskapar du balans och möjliggör återhämtning och läkning</p>
                   <div class="collapse collapsed-text" id="collapse5">
                     <p>
                       Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
@@ -278,7 +289,7 @@
                 <img src="assets/img/anna/Ledarskap.webp" alt="Ledarskap" >
                 <div class="card-body">
                   <h5 class="card-title">Ledarskap</h5>
-                  <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
+                  <p class="card-text">Autensitet, tillsammansskap och resultat, det är tillsammans vi skapar det goda resultatet. Ledarskap, självledarskap och kultur för framgångsrika organisationer.</p>
                   <div class="collapse collapsed-text" id="collapse6">
                     <p>
                       Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
@@ -298,7 +309,7 @@
                 <img src="assets/img/anna/Längtan.webp" alt="Längtan" >
                 <div class="card-body">
                   <h5 class="card-title">Längtan</h5>
-                  <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
+                  <p class="card-text">Drömmar, livet, kärlek, relationer, tillsammansskap, partner, barn, allt som ställer livet på ända och allt som sätter guldkant på det samma. Resan genom livet, dess uppgångar och dess dalar, hur navigerar vi genom det på bästa sätt?</p>
                   <div class="collapse collapsed-text" id="collapse7">
                     <p>
                       Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
@@ -318,7 +329,7 @@
                 <img src="assets/img/anna/Leka.webp" alt="Leka" >
                 <div class="card-body">
                   <h5 class="card-title">Leka</h5>
-                  <p class="card-text">Vi möter er med utvecklande synsätt och lärdomar.</p>
+                  <p class="card-text">Livslust, närhet, kärlek, meningsfullhet, ork och tilltro. Livet ska levas till 100 %, inte bara överlevas.</p>
                   <div class="collapse collapsed-text" id="collapse8">
                     <p>
                       Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
@@ -343,7 +354,7 @@
           <div class="row">
           <div class="col-md-6 ij-section2__text">
             <h2>
-              Företag
+              Organisation
             </h2>
             <p>
               Ac varius lectus tellus tellus quisque tristique aenean. Volutpat velit nulla eu iaculis risus in urna. 
@@ -364,7 +375,7 @@
           <div class="row">
           <div class="col-md-6 ij-section3__text">
             <h2>
-              Privatperson
+              Människa
             </h2>
             <p>
               Ac varius lectus tellus tellus quisque tristique aenean. Volutpat velit nulla eu iaculis risus in urna. 
