--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <p class="card-text">Nu börjar resan för resten av ditt liv</p>
                   </div>
                   <div class="card-links">
-                    <a class="read-more-link" href="/read-more-pages/learn.html">Läs mer</a>
+                    <a class="read-more-link" href="/learn.html">Läs mer</a>
                     <a href="#" class="btn btn-primary">Boka</a>
                   </div>
                 </div>
