--- a/learn.html
+++ b/learn.html
@@ -18,8 +18,8 @@
       <nav id="navbar" class="navbar navbar-expand-lg">
          <div class="container-fluid">
             <div class="ij-navbar-buttons">
-               <a class="" href="/index.html">
-                  <img src="/assets/img/logos/logga klarhet.png" class="img-fluid" alt="logo">
+               <a class="" href="index.html">
+                  <img src="assets/img/logos/logga klarhet.png" class="img-fluid" alt="logo">
                </a>
                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -28,16 +28,16 @@
            <div class="collapse navbar-collapse" id="navbarNavDropdown">
              <ul class="navbar-nav">
                <li class="nav-item">
-                 <a class="nav-link" href="/index.html">Hem</a>
+                 <a class="nav-link" href="index.html">Hem</a>
                </li>
                <li class="nav-item">
-                 <a class="nav-link"  href="/about.html">Om Oss</a>
+                 <a class="nav-link"  href="about.html">Om Oss</a>
                </li>
                <li class="nav-item">
-                 <a class="nav-link" href="/organisation.html">Organisation</a>
+                 <a class="nav-link" href="organisation.html">Organisation</a>
                </li>
                <li class="nav-item">
-                <a class="nav-link" href="/human.html">Människa och sinne</a>
+                <a class="nav-link" href="human.html">Människa och sinne</a>
               </li>
              </ul>
            </div>
@@ -55,7 +55,7 @@
               <div class="ij-hero__content">
                 <h1>Klarhet</h1>
               </div>
-              <img class="ij-hero__image" src="/assets/img/anna/oliver-pacas-LGD8eV8ar4E-unsplash.webp" alt="Hero Image">
+              <img class="ij-hero__image" src="assets/img/anna/oliver-pacas-LGD8eV8ar4E-unsplash.webp" alt="Hero Image">
             </div>
           </div>
         </div>
@@ -66,7 +66,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-         <a href="/index.html"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i>Tillbaka till startsidan</a>
+         <a href="index.html"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i>Tillbaka till startsidan</a>
         </div>
       </div>
     </div>
@@ -94,7 +94,7 @@
             </div>
           </div>
           <div class="col-md-6 ij-section2__img img-noZoom">
-            <img class="img-height" src="/assets/img/anna/Leva.webp">
+            <img class="img-height" src="assets/img/anna/Leva.webp">
           </div>
         </div>
         </div>
