--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                  <a class="nav-link" href="index.html">Hem</a>
                </li>
                <li class="nav-item">
-                 <a class="nav-link"  href="about.html">Om Oss</a>
+                 <a class="nav-link active"  href="about.html">Om Oss</a>
                </li>
                <li class="nav-item">
                  <a class="nav-link" href="organisation.html">Organisation</a>
@@ -45,33 +45,20 @@
        </nav>
    </header>
     <main>
-        <!-- Start Banner -->
-  <section id="home">
-    <div class="ij-hero">
-      <div class="ij-hero__wrap">
-        <div class="row">
-          <div class="col-md-12 padding">
-            <div class="ij-hero__item">
-              <div class="ij-hero__content">
-                <h1>Klarhet</h1>
-              </div>
-              <img class="ij-hero__image" src="assets/img/anna/oliver-pacas-LGD8eV8ar4E-unsplash.webp" alt="Hero Image">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-      <section id="aboutUs">
+      <section id="aboutUs" class="about">
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
               <h1>Om Oss</h1>
               <p>
-                Välkommen till Klarhet! Vi är här för att hjälpa dig på din resa mot välmående och balans.
+                Välkommen till Klarhet!
+                <br>
+                <br>
+                 Vi är här för att hjälpa dig på din resa mot välmående och balans.
                 <br> 
                 Vår passion är att guida dig till ett liv där du lever fullt ut, med klarhet och autenticitet.
                 Klarhet grundades av Anna och Katarina med en vision om att främja hälsa och välbefinnande på ett holistiskt sätt. Vi kombinerar vår erfarenhet inom sjukvård, beteendevetenskap och ledarskap för att erbjuda skräddarsydda tjänster som passar just dig och dina behov.
+                <br>
                 <br>
                 Vi tror på kraften i samtal, självreflektion och personlig utveckling. Genom att lyssna på din kropp, ditt sinne och dina känslor kan vi tillsammans skapa förändring och vägleda dig till ett liv i balans och harmoni.
                 Oavsett var du är på din resa, är du välkommen att utforska våra tjänster och ta det första steget mot en klarare och mer meningsfull tillvaro.
@@ -165,16 +152,11 @@
             <!-- Grid column 1 -->
             <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
                 <h3 class="text-uppercase mb-4">Följ oss</h3>
-                <p>
-                    Blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas
-                    molestias.
-                </p>
-
                 <div class="ij-footer__icons">
-                  <ul class="pb-3 mb-3">
-                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="bi bi-tiktok"></i></a></li>
-                    <li><a href="#"><i class="bi bi-instagram"></i></a></li>
+                  <ul>
+                    <li><a href="https://www.facebook.com/clearity.nu"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.tiktok.com/@clearity.nu?_t=8jw1NCRtPX6&_r=1&fbclid=IwAR0RVYmhcFuof7j0UXz4vbDcd4P0S6qbmnl38mrgJmGWX7Fdz492Q71YdN4"><i class="bi bi-tiktok"></i></a></li>
+                    <li><a href="https://www.instagram.com/clearity.nu?igsh=MTc4dWQ1cmwyb29vbQ%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a></li>
                  </ul>
                 </div>
             </div>
@@ -183,13 +165,11 @@
                 <h3 class="text-uppercase mb-4 pb-1">Hitta oss</h3>
                 <ul class="fa-ul" style="margin-left: 1.65em;">
                     <li class="mb-3">
-                        <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">New York, NY 10012, US</span>
+                    <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">Örebro, SE</span>
+                        
                     </li>
                     <li class="mb-3">
-                        <span class="fa-li"><i class="fas fa-envelope"></i></span><span class="ms-2">info@example.com</span>
-                    </li>
-                    <li class="mb-3">
-                        <span class="fa-li"><i class="fas fa-phone"></i></span><span class="ms-2">+ 01 234 567 88</span>
+                      <a href="mailto:info@clearity.nu"><span class="fa-li"><i class="fas fa-envelope"></i></span><span class="ms-2">info@clearity.nu</span></a>
                     </li>
                 </ul>
             </div>
