--- a/human.html
+++ b/human.html
@@ -37,7 +37,7 @@
                  <a class="nav-link" href="organisation.html">Organisation</a>
                </li>
                <li class="nav-item">
-                <a class="nav-link" href="human.html">Människa och sinne</a>
+                <a class="nav-link active" href="human.html">Människa och sinne</a>
               </li>
              </ul>
            </div>
@@ -45,61 +45,37 @@
        </nav>
    </header>
     <main>
-        <!-- Start Banner -->
-  <section id="home">
-    <div class="ij-hero">
-      <div class="ij-hero__wrap">
-        <div class="row">
-          <div class="col-md-12 padding">
-            <div class="ij-hero__item">
-              <div class="ij-hero__content">
-                <h1>Klarhet</h1>
-              </div>
-              <img class="ij-hero__image" src="assets/img/anna/oliver-pacas-LGD8eV8ar4E-unsplash.webp" alt="Hero Image">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-      <section id="aboutUs">
+      <section id="aboutUs" class="moreInfo human">
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
-              <h1>Männsika och sinne</h1>
+              <h1>Människa och sinne</h1>
               <p>
-               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-               when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, 
-               remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software 
-               like Aldus PageMaker including versions of Lorem Ipsum.
-               <br>
-               <br>
-               Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-               Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-               It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of 
-               Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                En bärande punkt i alla relationer är kommunikation och hur vi möter oss själva och varandra när livet bränner till. 
+                <br>
+                <br>
+                En annan förutsättning för goda relationer och förbundenhet har sitt ursprung i relationen till oss själva. Vem är jag när jag står i min sanning? Hur vill och behöver jag vara för att vara den mamma, pappa, partner, vän, kollega eller chef jag önskar vara?
+                Har du en inre drivkraft att gå vidare, framåt, att hitta en ny, alldeles egen stig, som bara din. Låt oss tala om hur den kan se ut och vilka steg du behöver ta för att påbörja vandringen. 
+                <br>
+                <br>
+                Du är din egen framtid, du sitter på alla svar, vi kan stötta dig och bidra till att du hittar just din väg och för att möjliggöra det kan du behöva titta bakåt och inåt, innan vandringen tar fart. 
               </p>
             </div>
           </div>
         </div>
       </section>
-    </main>
+  </main>
     <footer class="ij-footer">
       <div class="container-fluid">
         <div class="row">
             <!-- Grid column 1 -->
             <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
                 <h3 class="text-uppercase mb-4">Följ oss</h3>
-                <p>
-                    Blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas
-                    molestias.
-                </p>
-
                 <div class="ij-footer__icons">
-                  <ul class="pb-3 mb-3">
-                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="bi bi-tiktok"></i></a></li>
-                    <li><a href="#"><i class="bi bi-instagram"></i></a></li>
+                  <ul>
+                    <li><a href="https://www.facebook.com/clearity.nu"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.tiktok.com/@clearity.nu?_t=8jw1NCRtPX6&_r=1&fbclid=IwAR0RVYmhcFuof7j0UXz4vbDcd4P0S6qbmnl38mrgJmGWX7Fdz492Q71YdN4"><i class="bi bi-tiktok"></i></a></li>
+                    <li><a href="https://www.instagram.com/clearity.nu?igsh=MTc4dWQ1cmwyb29vbQ%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a></li>
                  </ul>
                 </div>
             </div>
@@ -108,13 +84,11 @@
                 <h3 class="text-uppercase mb-4 pb-1">Hitta oss</h3>
                 <ul class="fa-ul" style="margin-left: 1.65em;">
                     <li class="mb-3">
-                        <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">New York, NY 10012, US</span>
+                    <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">Örebro, SE</span>
+                        
                     </li>
                     <li class="mb-3">
-                        <span class="fa-li"><i class="fas fa-envelope"></i></span><span class="ms-2">info@example.com</span>
-                    </li>
-                    <li class="mb-3">
-                        <span class="fa-li"><i class="fas fa-phone"></i></span><span class="ms-2">+ 01 234 567 88</span>
+                      <a href="mailto:info@clearity.nu"><span class="fa-li"><i class="fas fa-envelope"></i></span><span class="ms-2">info@clearity.nu</span></a>
                     </li>
                 </ul>
             </div>
