--- a/organisation.html
+++ b/organisation.html
@@ -34,7 +34,7 @@
                  <a class="nav-link"  href="about.html">Om Oss</a>
                </li>
                <li class="nav-item">
-                 <a class="nav-link" href="organisation.html">Organisation</a>
+                 <a class="nav-link active" href="organisation.html">Organisation</a>
                </li>
                <li class="nav-item">
                 <a class="nav-link" href="human.html">Människa och sinne</a>
@@ -45,61 +45,46 @@
        </nav>
    </header>
     <main>
-        <!-- Start Banner -->
-  <section id="home">
-    <div class="ij-hero">
-      <div class="ij-hero__wrap">
-        <div class="row">
-          <div class="col-md-12 padding">
-            <div class="ij-hero__item">
-              <div class="ij-hero__content">
-                <h1>Klarhet</h1>
-              </div>
-              <img class="ij-hero__image" src="assets/img/anna/oliver-pacas-LGD8eV8ar4E-unsplash.webp" alt="Hero Image">
-            </div>
-          </div>
+
+  <section id="aboutUs" class="moreInfo organisation">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Organisation</h1>
+          <p>
+            Vi erbjuder individuellt ledarstöd och grupputveckling för ledningsgrupper och arbetsgrupper samt arbete med kultur i organisationer som strävar efter en kultur som kännetecknas av återkoppling, tillsammansskap, goda resultat och fin tillväxt. 
+            Katarina har haft roller där hon både suttit i ledningsgrupper, haft egna ledningsgrupper samt även arbetat med ledningsgrupper i rollen som management konsult. 
+            <br>
+            <br>
+            <i>
+            Katarina:
+            <br>
+            Efter att ha verkat i rollen som chef och ledare har jag lärt mig massor, både om vem jag är och hur jag vill vara som ledare och vad som fungerat och vad som fungerat mindre bra. Viktigt för mig har varit att vi dels byter bilder och kommunicerar oss igenom det som är svårt och det som gör motstånd, dels att främja en kultur som kännetecknas av omtanke, värme och tillsammansskap. 
+            <br>
+            <br>
+            Det är tillsammans vi skapar det goda resultatet.
+            Vill du leda på det autentiska sätt du faktiskt längtar efter? Är människan verkligen den viktigaste komponenten i er organisations framgång? Lever du ett ledarskap som främjar det? Om inte, låt oss prata om hur du kan bli en ännu större kraft i att ändra och förändra och använda hela din förmåga. Är du redan där och vill fortsätta bolla och utvecklas, låt oss mötas och se om vi tillsammans kan flytta fram horisonten ytterligare? 
+            <br>
+            <br>
+            Välkommen
+          </i>
+          </p>
         </div>
       </div>
     </div>
   </section>
-      <section id="aboutUs">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-12">
-              <h1>Organisation</h1>
-              <p>
-               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-               when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, 
-               remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software 
-               like Aldus PageMaker including versions of Lorem Ipsum.
-               <br>
-               <br>
-               Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-               Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-               It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of 
-               Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
+  </main>
     <footer class="ij-footer">
       <div class="container-fluid">
         <div class="row">
             <!-- Grid column 1 -->
             <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
                 <h3 class="text-uppercase mb-4">Följ oss</h3>
-                <p>
-                    Blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas
-                    molestias.
-                </p>
-
                 <div class="ij-footer__icons">
-                  <ul class="pb-3 mb-3">
-                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="bi bi-tiktok"></i></a></li>
-                    <li><a href="#"><i class="bi bi-instagram"></i></a></li>
+                  <ul>
+                    <li><a href="https://www.facebook.com/clearity.nu"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.tiktok.com/@clearity.nu?_t=8jw1NCRtPX6&_r=1&fbclid=IwAR0RVYmhcFuof7j0UXz4vbDcd4P0S6qbmnl38mrgJmGWX7Fdz492Q71YdN4"><i class="bi bi-tiktok"></i></a></li>
+                    <li><a href="https://www.instagram.com/clearity.nu?igsh=MTc4dWQ1cmwyb29vbQ%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a></li>
                  </ul>
                 </div>
             </div>
@@ -108,13 +93,11 @@
                 <h3 class="text-uppercase mb-4 pb-1">Hitta oss</h3>
                 <ul class="fa-ul" style="margin-left: 1.65em;">
                     <li class="mb-3">
-                        <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">New York, NY 10012, US</span>
+                    <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">Örebro, SE</span>
+                        
                     </li>
                     <li class="mb-3">
-                        <span class="fa-li"><i class="fas fa-envelope"></i></span><span class="ms-2">info@example.com</span>
-                    </li>
-                    <li class="mb-3">
-                        <span class="fa-li"><i class="fas fa-phone"></i></span><span class="ms-2">+ 01 234 567 88</span>
+                      <a href="mailto:info@clearity.nu"><span class="fa-li"><i class="fas fa-envelope"></i></span><span class="ms-2">info@clearity.nu</span></a>
                     </li>
                 </ul>
             </div>
