--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-   <header>
+   <header id="header">
       <nav id="navbar" class="navbar navbar-expand-lg">
          <div class="container-fluid">
             <div class="ij-navbar-buttons">
@@ -68,7 +68,7 @@
         <div class="col-md-4 idatest">
           <img src="assets/img/anna/Lära.webp" alt="Lära" loading="lazy">
           <p class="textDownLeft">Lära</p>
-          <a href="#ij-card1" class="link"></a>
+          <a href="#cardSection" class="link"></a>
         </div>
         <div class="col-md-4 idatest">
           <img src="assets/img/anna/SelfLove.webp" alt="Self love" loading="lazy">
@@ -116,9 +116,24 @@
          <!-- Cards -->
       <section id="section1">
           <div class="container ida-section1">
-              <div class="text-center">
-                  <h2 class="section-heading text-uppercase">Vi på klarhet</h2>
-                  <p class="section-subheading text-muted">Klicka dig vidare för att få mer information om oss och vilka vi är</p>
+              <div class="ida-section1__heading">
+                  <h2 class="section-heading text-uppercase">Om oss</h2>
+                  <p class="section-subheading text-muted">
+                    Efter att ha arbetat med beprövade metoder och tillvägagångssätt i många år förenades våra vägar i frågan kring varför så mycket ändå förblir detsamma? 
+                    Orsak och verkan, individualism eller tillsammansskap? 
+                    Vi vet att du kan så mycket mer än du anar, vi vet att resultatet i alla organisationer blir bättre när vi gör det tillsammans, på riktigt, vi vet att förbundenhet och nära relationer är allt. 
+                    Nu är tiden inne för att göra allt på helt nytt sätt, med KLARHET.
+                    <br>
+                    <br>
+                    Katarina har lång erfarenhet inom ledarskap, samtal och kommunikation. 
+                    Oavsett om drivkraften i att utvecklas ligger på det privata planet eller i yrkeslivet är vår erfarenhet att kommunikation och relation är två avgörande parametrar. 
+                    Katarina arbetar både med människa och med organisation inom kommunikation, relationer, grupputveckling, kultur och värderingar samt med samtal.
+                    <br>
+                    <br>
+                    Anna är sjuksköterska med lång och beprövad erfarenhet från hälsoundersökningar och kroppens fysiologiska karaktäristika. 
+                    Ökad balans, självinsikt och självledarskap i vardagen med mer lugn och harmoni än ekorrhjul, låter det intressant? 
+                    Anna guidar dig tryggt och med stort kunnande och stor kompetens på vägen framåt för både kropp och sinne.
+                  </p>
               </div>
               <div class="row justify-content-center">
                   <div class="col-lg-4">
@@ -126,7 +141,7 @@
                           <div class="round-image-container">
                             <img src="assets/img/anna-removebg-preview.png" alt="...">
                           </div>
-                          <a href="about.html#section3">Mer om Anna</a>
+                          <a href="about.html#section3">Läs mer om Anna</a>
                       </div>
                   </div>
                   <div class="col-lg-4">
@@ -134,7 +149,7 @@
                         <div class="round-image-container">
                           <img src="assets/img/katarina-removebg-preview.png" alt="...">
                         </div>
-                        <a href="about.html#section2">Mer om Katarina</a>
+                        <a href="about.html#section2">Läs mer om Katarina</a>
                     </div>
                 </div>
               </div>
@@ -149,7 +164,10 @@
                 <div class="card-body">
                   <div>
                     <h5 class="card-title">Lära</h5>
-                    <p class="card-text">Nu börjar resan för resten av ditt liv</p>
+                    <p class="card-text">Kunskapskälla & Utbildningar 
+                      <br>
+                      <i>Nu börjar resan för resten av ditt liv</i>
+                    </p>
                   </div>
                   <div class="card-links">
                     <a class="read-more-link" href="learn.html">Läs mer</a>
@@ -164,10 +182,13 @@
                 <div class="card-body">
                   <div>
                     <h5 class="card-title">Self Love</h5>
-                    <p class="card-text">Autensitet, sanning och värme</p>
+                    <p class="card-text">Börja med dig själv. 
+                      <br>
+                      <i>Autensitet, sanning och värme</i>
+                    </p>
                   </div>
                   <div class="card-links">
-                    <a class="read-more-link" href="/read-more-pages/selfLove.html">Läs mer</a>
+                    <a class="read-more-link" href="selfLove.html">Läs mer</a>
                     <a href="#" class="btn btn-primary">Boka</a>
                   </div>
                 </div>
@@ -179,10 +200,13 @@
                 <div class="card-body">
                   <div>
                     <h5 class="card-title">Leta</h5>
-                    <p class="card-text">Börjar där du står, leta och hitta precis det du vill, du kommer komma så långt som du själv önskar gå på din stig</p>
+                    <p class="card-text">Vart är jag på väg?
+                      <br>
+                      <i>Mod, hopp och riktning</i>
+                    </p>
                   </div>
                   <div class="card-links">
-                    <a class="read-more-link" href="/read-more-pages/look.html">Läs mer</a>
+                    <a class="read-more-link" href="search.html">Läs mer</a>
                     <a href="#" class="btn btn-primary">Boka</a>
                   </div>
                 </div>
@@ -194,7 +218,10 @@
                 <div class="card-body">
                   <div>
                     <h5 class="card-title">Leva</h5>
-                    <p class="card-text">Här och nu, inte sen, inte snart, utan NU</p>
+                    <p class="card-text">Livet ska levas och inte bara överlevas.
+                      <br>
+                      <i>Styrka, stabilitet och självtillit.</i>
+                    </p>
                   </div>
                   <div class="card-links">
                     <a class="read-more-link" href="/read-more-pages/live.html">Läs mer</a>
@@ -211,7 +238,10 @@
                 <div class="card-body">
                   <div>
                     <h5 class="card-title">Lyssna</h5>
-                    <p class="card-text">Hör du din kropps signaler? Lyssna för att skapa en bättre förståelse för vad just din kropp och ditt sinne behöver, då återskapar du balans och möjliggör återhämtning och läkning</p>
+                    <p class="card-text">Kroppens signaler. Så påverkar du din hälsa.  
+                      <br>
+                      Soul, body and mind
+                    </p>
                   </div>
                   <div class="card-links">
                     <a class="read-more-link" href="/read-more-pages/hear.html">Läs mer</a>
@@ -226,7 +256,10 @@
                 <div class="card-body">
                   <div>
                     <h5 class="card-title">Ledarskap</h5>
-                    <p class="card-text">Autensitet, tillsammansskap och resultat, det är tillsammans vi skapar det goda resultatet. Ledarskap, självledarskap och kultur för framgångsrika organisationer.</p>
+                    <p class="card-text">Når du dom resultat du önskar?
+                      <br>
+                      <i>Målbild, gemenskap och insperation</i>
+                    </p>
                   </div>
                   <div class="card-links">
                     <a class="read-more-link" href="/read-more-pages/leadership.html">Läs mer</a>
@@ -241,7 +274,9 @@
                 <div class="card-body">
                   <div>
                     <h5 class="card-title">Längtan</h5>
-                    <p class="card-text">Drömmar, livet, kärlek, relationer, tillsammansskap, partner, barn, allt som ställer livet på ända och allt som sätter guldkant på det samma. Resan genom livet, dess uppgångar och dess dalar, hur navigerar vi genom det på bästa sätt?</p>
+                    <p class="card-text">Vad önskar du?
+                      <i>Drömmar, kärlek och relationer</i>
+                    </p>
                   </div>
                   <div class="card-links">
                     <a class="read-more-link" href="/read-more-pages/longing.html">Läs mer</a>
@@ -256,7 +291,9 @@
                 <div class="card-body">
                   <div>
                     <h5 class="card-title">Leka</h5>
-                    <p class="card-text">Livslust, närhet, kärlek, meningsfullhet, ork och tilltro. Livet ska levas till 100 %, inte bara överlevas.</p>
+                    <p class="card-text">Vågar du gå utanför din konfortzon?
+                    <i>Meningsfullhet, insikter och kärlek till livet</i>
+                    </p>
                   </div>
                   <div class="card-links">
                     <a class="read-more-link" href="/read-more-pages/play.html">Läs mer</a>
@@ -268,59 +305,6 @@
           </div>
         </div>
       </section>
-
-       <!-- Section2 -->
-       <section id="section2" class="ij-section2">
-        <div class="container-fluid ij-section2__container">
-          <div class="row">
-          <div class="col-md-6 ij-section2__text">
-            <div>
-              <h2>
-                Organisation
-              </h2>
-              <p>
-                Ac varius lectus tellus tellus quisque tristique aenean. Volutpat velit nulla eu iaculis risus in urna. 
-                Eu morbi vel purus velit dui vel egestas purus sed. Eget turpis tincidunt faucibus montes arcu in nullam tortor orci. 
-                Nulla tellus sed purus vestibulum sagittis pretium donec nec mattis ollis porta sit ut.
-                Facilisi ut vulputate volutpat a aliquet. Facilisis sed quis pretium amet hac. Justo tristique sagittis sodales viverra venenatis integer fringilla.
-              </p>
-            </div>
-            <div>
-              <a href="/organisation.html">Läs mer<i class="fa-solid fa-arrow-right" aria-hidden="true"></i></a>
-            </div>
-          </div>
-          <div class="col-md-6 ij-section2__img">
-            <img src="assets/img/Company.jpg" >
-          </div>
-        </div>
-        </div>
-       </section>
-       <!-- Section3 -->
-       <section id="section3" class="ij-section3">
-        <div class="container-fluid ij-section3__container">
-          <div class="row">
-          <div class="col-md-6 ij-section3__text">
-            <div>
-              <h2>
-                Människa
-              </h2>
-              <p>
-                Ac varius lectus tellus tellus quisque tristique aenean. Volutpat velit nulla eu iaculis risus in urna. 
-                Eu morbi vel purus velit dui vel egestas purus sed. Eget turpis tincidunt faucibus montes arcu in nullam tortor orci. 
-                Nulla tellus sed purus vestibulum sagittis pretium donec nec mattis ollis porta sit ut.
-                Facilisi ut vulputate volutpat a aliquet. Facilisis sed quis pretium amet hac. Justo tristique sagittis sodales viverra venenatis integer fringilla.
-              </p>
-            </div>
-            <div>
-              <a href="/organisation.html">Läs mer<i class="fa-solid fa-arrow-right" aria-hidden="true"></i></a>
-            </div>
-          </div>
-          <div class="col-md-6 ij-section3__img">
-            <img src="assets/img/privatperson.jpg" >
-          </div>
-        </div>
-        </div>
-       </section>
     </main>
     <footer class="ij-footer">
       <div class="container-fluid">
@@ -328,16 +312,11 @@
             <!-- Grid column 1 -->
             <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
                 <h3 class="text-uppercase mb-4">Följ oss</h3>
-                <p>
-                    Blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas
-                    molestias.
-                </p>
-
                 <div class="ij-footer__icons">
-                  <ul class="pb-3 mb-3">
-                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="bi bi-tiktok"></i></a></li>
-                    <li><a href="#"><i class="bi bi-instagram"></i></a></li>
+                  <ul>
+                    <li><a href="https://www.facebook.com/clearity.nu"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.tiktok.com/@clearity.nu?_t=8jw1NCRtPX6&_r=1&fbclid=IwAR0RVYmhcFuof7j0UXz4vbDcd4P0S6qbmnl38mrgJmGWX7Fdz492Q71YdN4"><i class="bi bi-tiktok"></i></a></li>
+                    <li><a href="https://www.instagram.com/clearity.nu?igsh=MTc4dWQ1cmwyb29vbQ%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a></li>
                  </ul>
                 </div>
             </div>
@@ -346,13 +325,11 @@
                 <h3 class="text-uppercase mb-4 pb-1">Hitta oss</h3>
                 <ul class="fa-ul" style="margin-left: 1.65em;">
                     <li class="mb-3">
-                        <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">New York, NY 10012, US</span>
+                    <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">Örebro, SE</span>
+                        
                     </li>
                     <li class="mb-3">
-                        <span class="fa-li"><i class="fas fa-envelope"></i></span><span class="ms-2">info@example.com</span>
-                    </li>
-                    <li class="mb-3">
-                        <span class="fa-li"><i class="fas fa-phone"></i></span><span class="ms-2">+ 01 234 567 88</span>
+                      <a href="mailto:info@clearity.nu"><span class="fa-li"><i class="fas fa-envelope"></i></span><span class="ms-2">info@clearity.nu</span></a>
                     </li>
                 </ul>
             </div>
