--- a/learn.html
+++ b/learn.html
@@ -49,7 +49,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
-              <a class="goBack">Tillbaka till startsidan</a>
+              <a href="index.html" class="goBack">Tillbaka till startsidan</a>
               <h1>Lära</h1>
               <p>
                 1.	LEVA
