--- a/aboutKlarhet.html
+++ b/aboutKlarhet.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Människa och Sinne - Klarhet</title>
+   <title>Om Klarhet - Klarhet</title>
    <link rel="icon" href="assets/favicon_io (3)/favicon-32x32.png" type="image/x-icon">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -24,34 +24,39 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                 <li class="nav-item"><a class="nav-link" href="index.html">Hem</a></li>
-                <li class="nav-item"><a class="nav-link" href="aboutKlarhet.html">Om Klarhet</a></li>
+                <li class="nav-item"><a class="nav-link active" href="aboutKlarhet.html">Om Klarhet</a></li>
                 <li class="nav-item"><a class="nav-link" href="organisation.html">Organisation</a></li>
-                <li class="nav-item"><a class="nav-link active" href="human.html">Människa och sinne</a></li>
+                <li class="nav-item"><a class="nav-link" href="human.html">Människa och sinne</a></li>
             </ul>
         </div>
     </div>
 </nav>
     <main>
-      <section id="aboutUs" class="moreInfo human">
+      <section id="aboutUs" class="about margin">
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
-              <h1>Människa och sinne</h1>
+              <h1>Om Klarhet</h1>
               <p>
-                En bärande punkt i alla relationer är kommunikation och hur vi möter oss själva och varandra när livet bränner till. 
+                Efter att ha arbetat med beprövade metoder och tillvägagångssätt i många år förenades våra vägar i frågan kring varför så mycket ändå förblir detsamma? 
+                Orsak och verkan, individualism eller tillsammansskap? Vi vet att du kan så mycket mer än du anar, vi vet att resultatet i alla organisationer blir bättre när vi gör det tillsammans, på riktigt, vi vet att förbundenhet och nära relationer är allt. 
+                Nu är tiden inne för att göra allt på helt nytt sätt, med KLARHET.
                 <br>
                 <br>
-                En annan förutsättning för goda relationer och förbundenhet har sitt ursprung i relationen till oss själva. Vem är jag när jag står i min sanning? Hur vill och behöver jag vara för att vara den mamma, pappa, partner, vän, kollega eller chef jag önskar vara?
-                Har du en inre drivkraft att gå vidare, framåt, att hitta en ny, alldeles egen stig, som bara din. Låt oss tala om hur den kan se ut och vilka steg du behöver ta för att påbörja vandringen. 
+                Katarina har lång erfarenhet inom ledarskap, samtal och kommunikation. 
+                Oavsett om drivkraften i att utvecklas ligger på det privata planet eller i yrkeslivet är vår erfarenhet att kommunikation och relation är två avgörande parametrar. 
+                Katarina arbetar både med människa och med organisation inom kommunikation, relationer, grupputveckling, kultur och värderingar samt med samtal.
                 <br>
                 <br>
-                Du är din egen framtid, du sitter på alla svar, vi kan stötta dig och bidra till att du hittar just din väg och för att möjliggöra det kan du behöva titta bakåt och inåt, innan vandringen tar fart. 
+                Anna är sjuksköterska med lång och beprövad erfarenhet från hälsoundersökningar och kroppens fysiologiska karaktäristika. 
+                Ökad balans, självinsikt och självledarskap i vardagen med mer lugn och harmoni än ekorrhjul, låter det intressant? 
+                Anna guidar dig tryggt och med stort kunnande och stor kompetens på vägen framåt för både kropp och sinne.
               </p>
             </div>
           </div>
         </div>
       </section>
-  </main>
+    </main>
     <footer class="ij-footer">
       <div class="container-fluid">
         <div class="row">
