--- a/index.html
+++ b/index.html
@@ -10,65 +10,55 @@
    <link rel="stylesheet" href="SCSS/main.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-   <header id="header">
-      <nav id="navbar" class="navbar navbar-expand-lg">
-         <div class="container-fluid">
-            <div class="ij-navbar-buttons">
-               <a class="" href="#">
-                  <img src="assets/img/logos/logga klarhet.png" class="img-fluid" alt="logo">
-               </a>
-               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-               </button>
-            </div>
-           <div class="collapse navbar-collapse" id="navbarNavDropdown">
-             <ul class="navbar-nav">
-               <li class="nav-item">
-                 <a class="nav-link active" aria-current="page" href="#">Hem</a>
-               </li>
-               <li class="nav-item">
-                 <a class="nav-link" href="about.html">Om Oss</a>
-               </li>
-               <li class="nav-item">
-                 <a class="nav-link" href="organisation.html">Organisation</a>
-               </li>
-               <li class="nav-item">
-                <a class="nav-link" href="human.html">Människa och sinne</a>
-              </li>
-             </ul>
-           </div>
-         </div>
-       </nav>
-   </header>
-    <main>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"><img src="assets/img/logos/logga klarhet.png" alt="..." /></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          Meny  
+          <i class="fas fa-bars ms-1"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                <li class="nav-item"><a class="nav-link active" href="index.html">Hem</a></li>
+                <li class="nav-item"><a class="nav-link" href="aboutKlarhet.html">Om Klarhet</a></li>
+                <li class="nav-item"><a class="nav-link" href="organisation.html">Organisation</a></li>
+                <li class="nav-item"><a class="nav-link" href="human.html">Människa och sinne</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
   <!-- Start Banner -->
-  <section id="home">
-    <div class="ij-hero">
-      <div class="ij-hero__wrap">
-        <div class="row">
-          <div class="col-md-12 padding">
-            <div class="ij-hero__item">
-              <div class="ij-hero__content">
-                <h1>KLARHET</h1>
+  <header id="home">
+      <div class="ij-hero">
+        <div class="ij-hero__wrap">
+          <div class="row">
+            <div class="col-md-12 padding">
+              <div class="ij-hero__item">
+                <div class="ij-hero__content">
+                  <h1>KLARHET</h1>
+                </div>
+                <img class="ij-hero__image" src="assets/img/anna/oliver-pacas-LGD8eV8ar4E-unsplash.webp" alt="Hero Image">
               </div>
-              <img class="ij-hero__image" src="assets/img/anna/oliver-pacas-LGD8eV8ar4E-unsplash.webp" alt="Hero Image">
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+  </header>
+  <main>
   <section id="gridSection">
     <div class="container-fluid text-center">
       <div class="row">
         <div class="col-md-4 idatest">
           <img src="assets/img/anna/Lära.webp" alt="Lära" loading="lazy">
           <p class="textDownLeft">Lära</p>
-          <a href="#cardSection" class="link"></a>
+          <a href="#ij-card1" class="link"></a>
         </div>
         <div class="col-md-4 idatest">
           <img src="assets/img/anna/SelfLove.webp" alt="Self love" loading="lazy">
@@ -85,7 +75,7 @@
         <div class="col-md-6 idatest2">
           <img src="assets/img/anna/Ledarskap.webp" alt="Ledarskap" loading="lazy">
           <p class="textDownMiddle">Ledarskap</p>
-          <a href="#ij-card6" class="link"></a>
+          <a href="#ij-card4" class="link"></a>
         </div>
         <div class="col-md-6 idatest2">
           <img src="assets/img/anna/Lyssna.webp" alt="Lyssna" loading="lazy">
@@ -97,7 +87,7 @@
         <div class="col-md-4 idatest">
           <img src="assets/img/anna/Leva.webp" alt="Leva" loading="lazy">
           <p class="textDownRight">Leva</p>
-          <a href="#ij-card4" class="link"></a>
+          <a href="#ij-card6" class="link"></a>
         </div>
         <div class="col-md-4 idatest">
           <img src="assets/img/anna/Längtan.webp" alt="Längtan" loading="lazy">
@@ -117,22 +107,8 @@
       <section id="section1">
           <div class="container ida-section1">
               <div class="ida-section1__heading">
-                  <h2 class="section-heading text-uppercase">Om oss</h2>
+                  <h2 class="section-heading text-uppercase"><a href="about.html">Om oss</a></h2>
                   <p class="section-subheading text-muted">
-                    Efter att ha arbetat med beprövade metoder och tillvägagångssätt i många år förenades våra vägar i frågan kring varför så mycket ändå förblir detsamma? 
-                    Orsak och verkan, individualism eller tillsammansskap? 
-                    Vi vet att du kan så mycket mer än du anar, vi vet att resultatet i alla organisationer blir bättre när vi gör det tillsammans, på riktigt, vi vet att förbundenhet och nära relationer är allt. 
-                    Nu är tiden inne för att göra allt på helt nytt sätt, med KLARHET.
-                    <br>
-                    <br>
-                    Katarina har lång erfarenhet inom ledarskap, samtal och kommunikation. 
-                    Oavsett om drivkraften i att utvecklas ligger på det privata planet eller i yrkeslivet är vår erfarenhet att kommunikation och relation är två avgörande parametrar. 
-                    Katarina arbetar både med människa och med organisation inom kommunikation, relationer, grupputveckling, kultur och värderingar samt med samtal.
-                    <br>
-                    <br>
-                    Anna är sjuksköterska med lång och beprövad erfarenhet från hälsoundersökningar och kroppens fysiologiska karaktäristika. 
-                    Ökad balans, självinsikt och självledarskap i vardagen med mer lugn och harmoni än ekorrhjul, låter det intressant? 
-                    Anna guidar dig tryggt och med stort kunnande och stor kompetens på vägen framåt för både kropp och sinne.
                   </p>
               </div>
               <div class="row justify-content-center">
@@ -151,6 +127,17 @@
                         </div>
                         <a href="about.html#section2">Läs mer om Katarina</a>
                     </div>
+                </div>
+              </div>
+              <div class="newsLetter">
+                <div>
+                  <h3>Prenumerera på vårt månadsbrev</h3>
+                  <form id="subscriptionForm">
+                      <input type="email" id="email" name="email" placeholder="Ange din epost" required>
+                      <button type="submit">Prenumerera</button>
+                  </form>
+                  <p><a href="#">Här</a> kan du läsa mer om vår behandling av dina personuppgifter och om dina rättigheter.</p>
+                  <p id="confirmationMessage" style="display:none;">Du är nu prenumerant på vårt månadsbrev!</p>
                 </div>
               </div>
           </div>
@@ -340,8 +327,9 @@
         <p class="text-center text-body-secondary">© Copyright 2023</p>
       </div>
     </footer>
-   <script src="Javascript/main.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+   <script src="Javascript/main.js"></script>
+
 </body>
 </html>
