--- a/organisation.html
+++ b/organisation.html
@@ -3,49 +3,35 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Om oss - Klarhet</title>
+   <title>Organisation - Klarhet</title>
    <link rel="icon" href="assets/favicon_io (3)/favicon-32x32.png" type="image/x-icon">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
    <link rel="stylesheet" href="SCSS/main.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-   <header>
-      <nav id="navbar" class="navbar navbar-expand-lg">
-         <div class="container-fluid">
-            <div class="ij-navbar-buttons">
-               <a class="" href="index.html">
-                  <img src="assets/img/logos/logga klarhet.png" class="img-fluid" alt="logo">
-               </a>
-               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-               </button>
-            </div>
-           <div class="collapse navbar-collapse" id="navbarNavDropdown">
-             <ul class="navbar-nav">
-               <li class="nav-item">
-                 <a class="nav-link" href="index.html">Hem</a>
-               </li>
-               <li class="nav-item">
-                 <a class="nav-link"  href="about.html">Om Oss</a>
-               </li>
-               <li class="nav-item">
-                 <a class="nav-link active" href="organisation.html">Organisation</a>
-               </li>
-               <li class="nav-item">
-                <a class="nav-link" href="human.html">Människa och sinne</a>
-              </li>
-             </ul>
-           </div>
-         </div>
-       </nav>
-   </header>
-    <main>
-
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"><img src="assets/img/logos/logga klarhet.png" alt="..." /></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          Meny  
+          <i class="fas fa-bars ms-1"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                <li class="nav-item"><a class="nav-link" href="index.html">Hem</a></li>
+                <li class="nav-item"><a class="nav-link" href="aboutKlarhet.html">Om Klarhet</a></li>
+                <li class="nav-item"><a class="nav-link active" href="organisation.html">Organisation</a></li>
+                <li class="nav-item"><a class="nav-link" href="human.html">Människa och sinne</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<main>
   <section id="aboutUs" class="moreInfo organisation">
     <div class="container-fluid">
       <div class="row">
